Make data json be stored in folder instead of individually mapped files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,5 +5,4 @@ services:
     ports:
       - 3000:3000
     volumes:
-      - ./events.json:/app/events.json
-      - ./users.json:/app/users.json
+      - ./data:/app/data
